# Python-Web-Analyzer

./: .gitignore  LICENSE  README.md  inject_ga.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: model_design.md  requirements_definition.md  screen_transition.md
src/web_analyzer/: main.py  models.py
src/web_analyzer/core/: crawler.py  evaluator.py  excel_service.py  scraper_service.py  ssl_checker.py
src/web_analyzer/utils/: decorators.py  logger.py
tests/: test_evaluator.py  test_excel_service.py  test_ssl_checker.py
